welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:3: error: not found: value result
	result = false;
        ^lastDigit:7: error: not found: value result
		result = true;
                ^lastDigit:10: error: not found: value result
		return result;
                       ^