welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {

	result = false;

	if(a%10 == b%10 && a%10 == c%10 || a%10 == b%10 && b%10 == c%10 || a%10 == c%10 && b%10 == c%10)
	{
		result = true;
	}
	
		return result;
	
}
